# Strazzle

./: .clang-format  CMakeLists.txt  main.cpp
Examples/: CMakeLists.txt
Examples/BaseString/: BaseString.cpp
Examples/String/: String.cpp
Tests/: BaseString.cpp  CMakeLists.txt  StringAllocator.cpp  test-main.cpp
include/: BaseString.h
include/Strazzle/: String.h
